test/e2e/testdata/hooks/ingress/module/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e2e-ingress
  namespace: e2e-hooks
spec:
  rules:
    - host: e2e.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e2e-svc
                port:
                  number: 80
